--- a/vscode_usersettings.json
+++ b/vscode_usersettings.json
@@ -13,17 +13,19 @@
     "python.createEnvironment.trigger": "off",
     "editor.minimap.enabled": false,
     "workbench.colorCustomizations": {
-        "terminal.background":"#090300",
-        "terminal.foreground":"#A5A2A2",
+        "terminal.background": "#000000",
+        "terminal.foreground": "#FFFFFF",
         "terminalCursor.background":"#A5A2A2",
         "terminalCursor.foreground":"#A5A2A2",
 
-        "panel.background": "#FF4500", // Background color of the panel
+        // "panel.background": "#FF4500", // Background color of the panel
         "panel.border": "#FF4500", // Border color of the panel
         "panel.dropBackground": "#282828", // Background color when dragging and dropping an item into the panel
         "panelTitle.activeBorder": "#FFD700", // Border color of the active panel title
         "panelTitle.activeForeground": "#FFFFFF", // Foreground color of the active panel title
-        "panelTitle.inactiveForeground": "#A5A5A5" // Foreground color of ina
+        "panelTitle.inactiveForeground": "#A5A5A5", // Foreground color of ina
+
+        "sideBar.border": "#FF4500"
     },
     "workbench.colorTheme": "Atom One Dark"
 }
